fixed dynanmic header

--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -55,7 +55,7 @@ li{
   display: flex;
   align-items: center;
   justify-content: space-around;
-  height: 8vh;
+  height: 70px;
   background-color: #77bb3f;
 }
 
