fixed dynanmic header

--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -115,7 +115,7 @@ li{
 .nav_link{
   --b: 1px;   /* border thickness */
   --s: .15em; /* size of the corner */
-  --c: black;
+  --c: white;
   
   padding: calc(.05em + var(--s)) calc(.3em + var(--s));
   color: var(--c);
@@ -139,30 +139,12 @@ li{
   color: #fff;
 }
 
-.NavBarSizing{
-  width: 100%;
-  height: 10%;
-  background-color: #77bb3f;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;
+/* ---------------------------- SEARCH.JS STYLES ---------------------------------- */
+.backgroundSearch{
+  background-color: #F9DEC9;
+  min-height: calc(100vh - 70px - 4rem);
 }
 
-.NavBarLogo{
-  width: 50%;
-  padding-left: 1%;
-  display: flex;
-  justify-content: left;
-  flex-direction: row; 
-}
-
-.NavBarButtons{
-  width: 50%;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;  
-  align-items: center;
-}
 
 /* ---------------------------- APP.JS STYLES ---------------------------------- */
 
@@ -197,6 +179,9 @@ li{
 footer {
   color: white;
   background-color: #77bb3f;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 }
 
 .contact-info {
