--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -269,3 +269,40 @@ footer p {
   }
 }
 
+
+/* ---------------------------- AccountPage.JS STYLES ---------------------------------- */
+
+.accountNav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.displayCard{
+  border-radius: 45px;
+  background-color: #ffffff;
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+  z-index: 1;
+  box-shadow: 0 5px 50px #000000;
+}
+
+.pageData{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.accountInfoDisplay{
+  float: left;
+  justify-content: left;
+  flex-direction: column;
+  padding: 5%;
+}
