--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -198,7 +198,7 @@ li{
   margin: 10vh;
 }
 
-.home-card {
+.fact-card {
   flex: 0 0 350px;
   background-color: #2F4B26;
   margin: 1.5rem;
@@ -208,24 +208,108 @@ li{
 }
 
 
-.home-card p:first-child {
+.fact-card p:first-child {
   padding-top: 1em;
 }
 
-.home-card p {
+.fact-card p {
   line-height: 2;
   text-align: center;
   color: white;
 }
 
-.home-card h1 {
+.fact-card h1 {
   line-height: 2;
   text-align: center;
   color: white;
 }
 
-.home-card p:last-child {
+.fact-card p:last-child {
   padding-bottom: 1em;
+}
+
+/* -------------------------------- SEARCHBAR STYLES ----------------------------------------- */
+.bar {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 3vh;
+}
+
+.searchInputs {
+  margin-top: 2vh;
+  display: flex;
+  justify-content: center;
+}
+
+.search input {
+  background-color: white;
+  border: 0;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 300px;
+}
+
+.home-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 10vh;
+}
+
+.searchIcon {
+  height: 60px;
+  width: 50px;
+  background-color: white;
+  display: grid;
+  place-items: center;
+}
+
+input:focus {
+  outline: none;
+}
+.searchIcon svg {
+  font-size: 35px;
+}
+
+.dataResult {
+  margin-top: 5px;
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.dataResult::-webkit-scrollbar {
+  display: none;
+}
+
+.dataResult .dataItem {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
+.dataItem p {
+  margin-left: 10px;
+}
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: lightgrey;
+}
+
+#clearBtn {
+  cursor: pointer;
 }
 
 /* -------------------------------- FOOTER STYLES ----------------------------------------- */
@@ -269,3 +353,39 @@ footer p {
   }
 }
 
+
+/* -------------------------------- SEARCH RESULT CARDS ------------------------------ */
+.search-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.search-card {
+  flex: 0 0 350px;
+  background-color: #2F4B26;
+  margin: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16), 0 1px 3px rgba(0, 0, 0, 0.23);
+  transition: all 200ms ease-in-out;
+}
+
+.search-card p {
+  line-height: 2;
+  text-align: center;
+  color: white;
+}
+
+.search-card h1 {
+  line-height: 2;
+  text-align: center;
+  color: white;
+}
+
+.search-card p:first-child {
+  padding-top: 1em;
+}
+
+.search-card p:last-child {
+  padding-bottom: 1em;
+}
