--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -438,7 +438,8 @@ footer p {
   display: flex;
   flex-direction: row;
   justify-content: right;
-  padding-right: 5%;
+  padding-right: 0%;
+  padding-top: 2%;
 }
 
 form {
