--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -355,7 +355,6 @@ footer p {
 
 
 /* -------------------------------- SEARCH RESULT CARDS ------------------------------ */
-
 .search-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -370,6 +369,12 @@ footer p {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.16), 0 1px 3px rgba(0, 0, 0, 0.23);
   transition: all 200ms ease-in-out;
 }
+
+.search-card:hover {
+  transform: translateY(-1rem);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.4), 0 1px 6px rgba(0, 0, 0, 0.4);
+}
+
 
 .search-card p {
   line-height: 2;
@@ -389,6 +394,10 @@ footer p {
 
 .search-card p:last-child {
   padding-bottom: 1em;
+}
+
+.search-group-info a {
+  color:aqua;
 }
 /* ---------------------------- AccountPage.JS STYLES ---------------------------------- */
 
@@ -439,8 +448,7 @@ footer p {
   display: flex;
   flex-direction: row;
   justify-content: right;
-  padding-right: 0%;
-  padding-top: 2%;
+  padding-right: 5%;
 }
 
 form {
@@ -478,16 +486,6 @@ form {
 
 }
 
-.meowButton{
-  background-color: white;
-  color: black;
-  border: 2px solid #2F4B26;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 1%;
-}
-
-.meowButton:hover{
-  transform: scale(1.1);
-  transition: 0.1s ease-in;
+.meow{
+  
 }
