--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -448,7 +448,6 @@ footer p {
   display: flex;
   flex-direction: row;
   justify-content: right;
-  padding-right: 5%;
 }
 
 form {
@@ -486,6 +485,16 @@ form {
 
 }
 
-.meow{
-  
+.meowButton{
+  background-color: white;
+  color: black;
+  border: 2px solid #2F4B26;
+  padding: 1%;
+  cursor: pointer;
+  margin-top: 1%;
+  border-radius: 5px;
+}
+.meowButton:hover{
+  transform: scale(1.1);
+  transition: 0.1s ease-in;
 }
