--- a/eco-ryde/src/index.css
+++ b/eco-ryde/src/index.css
@@ -463,6 +463,7 @@ form {
 
 .headerCenter{
   text-align: center;
+  padding: 1%;
 }
 
 .accountNavDiv{
@@ -495,6 +496,60 @@ form {
   border-radius: 5px;
 }
 .meowButton:hover{
+  transform: scale(1.1);
+  transition: 0.1s ease-in;
+}
+
+.rideElement{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1%;
+  width: 100%;
+}
+
+.rideElementDiv1{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+.rideElementDiv2{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.rideElementDiv3{
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  background-color: white;
+  color: black;
+  border: 2px solid #2F4B26;
+  padding: 1%;
+  cursor: pointer;
+  margin-top: 1%;
+  border-radius: 5px;
+}
+.rideElementDiv3:hover{
+  transform: scale(1.1);
+  transition: 0.1s ease-in;
+}
+
+.meowButton2{
+  background-color: #F9DEC9;
+  color: black;
+  border: 2px solid #2F4B26;
+  padding: 1%;
+  cursor: pointer;
+  margin-top: 1%;
+  border-radius: 5px;
+}
+
+.meowButton2:hover{
   transform: scale(1.1);
   transition: 0.1s ease-in;
 }
